<package format="2">
  <name>arl_unity_ros</name>
  <version>0.1.0</version>
  <description>
    Basic package for interacting with arl-unity-ros from ROS
  </description>
  <maintainer email="jonathan.r.fink3.civ@mail.mil">Jon Fink</maintainer>
  <author email="jcarter@csail.mit.edu">John Carter</author>
  <license>ARL-Shared</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

</package>
