<?xml version="1.0"?>
<package format="2">

  <name>orcvio</name>
  <version>0.0.1</version>
  <description>OrcVIO: Object residual constrained Visual-Inertial Odometry</description>

  <maintainer email="moshan@ucsd.edu">Mo Shan</maintainer>

  <license>TODO</license>

  <author email="moshan@ucsd.edu">Mo Shan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_srvs</depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>sort_ros</depend>
  <depend>starmap_ros_msgs</depend>

  <depend>orcvio_ros_msgs</depend>
  <depend>orcvio_ros_srvs</depend>

  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>
  <depend>suitesparse</depend>

  <test_depend>rosunit</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
